Implement rpm packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,19 +42,35 @@ SET(PREFIX_DATA lib)
 IF (NOT WIN32)
   # default
   SET (ARCH "i386")
-  IF (EXISTS /etc/debian_version)
-    IF (CMAKE_SIZEOF_VOID_P MATCHES "8")
-      SET (ARCH "amd64")
-    ELSE (CMAKE_SIZEOF_VOID_P MATCHES "8")
-      SET (ARCH "i386")
-    ENDIF (CMAKE_SIZEOF_VOID_P MATCHES "8")
-
+  IF (UNIX AND NOT APPLE)
     IF (PREFIX)
         SET(CMAKE_INSTALL_PREFIX ${PREFIX})
     ELSE (PREFIX )
         SET(CMAKE_INSTALL_PREFIX "/usr/")
     ENDIF (PREFIX)
-  ENDIF (EXISTS /etc/debian_version)
+
+    IF (EXISTS /etc/debian_version)
+      SET (PACKAGE_FORMAT "DEB")
+      SET (PACKAGE_DEPS "libc6, libwxgtk2.8-0 (>= 2.8.7.1), libglu1-mesa (>= 7.0.0), libgl1-mesa-glx (>= 7.0.0), zlib1g, bzip2")
+      SET (LIB_INSTALL_DIR "lib")
+      IF (CMAKE_SIZEOF_VOID_P MATCHES "8")
+        SET (ARCH "amd64")
+      ELSE (CMAKE_SIZEOF_VOID_P MATCHES "8")
+        SET (ARCH "i386")
+      ENDIF (CMAKE_SIZEOF_VOID_P MATCHES "8")
+    ENDIF (EXISTS /etc/debian_version)
+    IF (EXISTS /etc/redhat-release)
+      SET (PACKAGE_FORMAT "RPM")
+      SET (PACKAGE_DEPS  "opencpn zlib bzip2")
+      IF (CMAKE_SIZEOF_VOID_P MATCHES "8")
+        SET (ARCH "x86_64")
+        SET (LIB_INSTALL_DIR "lib64")
+      ELSE (CMAKE_SIZEOF_VOID_P MATCHES "8")
+        SET (ARCH "i386")
+        SET (LIB_INSTALL_DIR "lib")
+      ENDIF (CMAKE_SIZEOF_VOID_P MATCHES "8")
+    ENDIF (EXISTS /etc/redhat-release)
+  ENDIF (UNIX AND NOT APPLE)
 endif(NOT WIN32)
 
 MESSAGE (STATUS "*** Build Architecture is ${ARCH}")
@@ -199,15 +215,15 @@ SET(PREFIX_PARENTDATA ${PREFIX_DATA}/${PARENT})
 SET(PREFIX_PARENTBIN bin)
 INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION ${PREFIX_PARENTDATA})
 
-IF (ARCH MATCHES "amd64")
+IF (ARCH MATCHES "amd64" OR ARCH MATCHES "x86_64")
 INSTALL(FILES "buildlinux64/OCPNsenc/OCPNsenc"
-       PERMISSIONS OWNER_EXECUTE OWNER_WRITE WORLD_READ WORLD_EXECUTE
+       PERMISSIONS OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        DESTINATION ${PREFIX_PARENTBIN})
-ELSE (ARCH MATCHES "amd64")
+ELSE (ARCH MATCHES "amd64" OR ARCH MATCHES "x86_64")
 INSTALL(FILES "buildlinux/OCPNsenc/OCPNsenc"
-       PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ WORLD_EXECUTE
+       PERMISSIONS OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        DESTINATION ${PREFIX_PARENTBIN})
-ENDIF (ARCH MATCHES "amd64")
+ENDIF (ARCH MATCHES "amd64" OR ARCH MATCHES "x86_64")
 
 ENDIF(UNIX AND NOT APPLE)
 
@@ -331,9 +347,6 @@ ENDIF(GETTEXT_MSGFMT_EXECUTABLE)
 # build a CPack driven installer package
 #include (InstallRequiredSystemLibraries)
 
-SET (LIB_INSTALL_DIR "lib")
-SET (PACKAGE_FORMAT "DEB")
-SET (PACKAGE_DEPS "libc6, libwxgtk2.8-0 (>= 2.8.7.1), libglu1-mesa (>= 7.0.0), libgl1-mesa-glx (>= 7.0.0), zlib1g, bzip2")
 
 SET(CPACK_PACKAGE_NAME "S63_PI")
 SET(CPACK_PACKAGE_VENDOR "opencpn.org")
