Change locale catalog name to opencpn-s63_pi to match others plugins

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ MESSAGE (STATUS "*** Will install to ${CMAKE_INSTALL_PREFIX}  ***")
 
 SET(PREFIX_BIN bin)
 SET(PREFIX_INCLUDE include)
-SET(PREFIX_DATA lib)
+SET(PREFIX_DATA share)
 
 IF (NOT WIN32)
   # default
@@ -211,9 +211,9 @@ ENDIF(NOT APPLE)
 
 IF(UNIX AND NOT APPLE)
 SET(PARENT opencpn)
-SET(PREFIX_PARENTDATA ${PREFIX_DATA}/${PARENT})
+SET(PREFIX_PLUGINS ${LIB_INSTALL_DIR}/${PARENT})
 SET(PREFIX_PARENTBIN bin)
-INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION ${PREFIX_PARENTDATA})
+INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION ${PREFIX_PLUGINS})
 
 IF (ARCH MATCHES "amd64" OR ARCH MATCHES "x86_64")
 INSTALL(FILES "buildlinux64/OCPNsenc/OCPNsenc"
@@ -304,9 +304,9 @@ MACRO(GETTEXT_BUILD_MO  _poFile _lang)
 
 
 IF(APPLE)
-      INSTALL(FILES ${_gmoFile} DESTINATION ${CMAKE_INSTALL_PREFIX}/s63_pi/s63_pi/Resources/${_lang}.lproj RENAME ${PACKAGE_NAME}.mo )
+      INSTALL(FILES ${_gmoFile} DESTINATION ${CMAKE_INSTALL_PREFIX}/s63_pi/s63_pi/Resources/${_lang}.lproj RENAME opencpn-${PACKAGE_NAME}.mo )
 ELSE(APPLE)
-      INSTALL(FILES ${_gmoFile} DESTINATION ${PREFIX_DATA}/locale/${_lang}/LC_MESSAGES RENAME ${PACKAGE_NAME}.mo PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
+      INSTALL(FILES ${_gmoFile} DESTINATION ${PREFIX_DATA}/locale/${_lang}/LC_MESSAGES RENAME opencpn-${PACKAGE_NAME}.mo PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
 ENDIF(APPLE)
 
       SET(_gmoFiles ${_gmoFiles} ${_gmoFile})
