Backport to OCPN 4.0.0, mainly wxWidgets 2.8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 
 IF(WIN32)
 #      INCLUDE_DIRECTORIES("U:/Projects/opencpn_sf/opencpn/include")
+  ADD_DEFINITIONS( "-D__OCPN_BACKPORT40__" )
 ENDIF(WIN32)
 
 IF(UNIX)
