Imtegrate OCPNsenc helper utility for ARMHF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,11 @@ IF (NOT WIN32)
   ENDIF (UNIX AND NOT APPLE)
 endif(NOT WIN32)
 
+IF (CMAKE_SYSTEM_PROCESSOR MATCHES "arm*")
+  SET (ARCH "armhf")
+  ADD_DEFINITIONS( -DARMHF )
+ENDIF (CMAKE_SYSTEM_PROCESSOR MATCHES "arm*")
+
 MESSAGE (STATUS "*** Build Architecture is ${ARCH}")
 
 
@@ -221,9 +226,17 @@ INSTALL(FILES "buildlinux64/OCPNsenc/OCPNsenc"
        PERMISSIONS OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        DESTINATION ${PREFIX_PARENTBIN})
 ELSE (ARCH MATCHES "amd64" OR ARCH MATCHES "x86_64")
-INSTALL(FILES "buildlinux/OCPNsenc/OCPNsenc"
-       PERMISSIONS OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
-       DESTINATION ${PREFIX_PARENTBIN})
+
+    IF (ARCH MATCHES "arm*" )
+        INSTALL(FILES "buildlinuxarm/OCPNsenc/OCPNsenc"
+          PERMISSIONS OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+          DESTINATION ${PREFIX_PARENTBIN})
+    ELSE (ARCH MATCHES "arm*" )
+        INSTALL(FILES "buildlinux/OCPNsenc/OCPNsenc"
+          PERMISSIONS OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+          DESTINATION ${PREFIX_PARENTBIN})
+    ENDIF (ARCH MATCHES "arm*" )
+
 ENDIF (ARCH MATCHES "amd64" OR ARCH MATCHES "x86_64")
 
 ENDIF(UNIX AND NOT APPLE)
