Revise ARM build options.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,7 @@ IF(NOT WIN32)
 ENDIF(NOT WIN32)
 
 IF (ARCH MATCHES "arm*" )
- ADD_DEFINITIONS( " -U_FORTIFY_SOURCE -fno-stack-protector" )
+ ADD_DEFINITIONS( " -O0" )
 ENDIF (ARCH MATCHES "arm*" )
 
 
