Adding detection of OpenSUSE
Signed-off-by: Dominig ar Foll <dominig.arfoll@fridu.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ IF (NOT WIN32)
         SET (ARCH "i386")
       ENDIF (CMAKE_SIZEOF_VOID_P MATCHES "8")
     ENDIF (EXISTS /etc/debian_version)
-    IF (EXISTS /etc/redhat-release)
+    IF (EXISTS /etc/redhat-release OR EXISTS /etc/susehelp.d)
       SET (PACKAGE_FORMAT "RPM")
       SET (PACKAGE_DEPS  "opencpn")
       IF (CMAKE_SIZEOF_VOID_P MATCHES "8")
@@ -74,7 +74,7 @@ IF (NOT WIN32)
         SET (ARCH "i386")
         SET (LIB_INSTALL_DIR "lib")
       ENDIF (CMAKE_SIZEOF_VOID_P MATCHES "8")
-    ENDIF (EXISTS /etc/redhat-release)
+    ENDIF (EXISTS /etc/redhat-release OR EXISTS /etc/susehelp.d)
   ENDIF (UNIX AND NOT APPLE)
 endif(NOT WIN32)
 
