Update for O5 API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,7 +164,7 @@ SET(SRC_S63
             src/s63chart.h
             src/mygeom63.h
             src/mygeom63.cpp
-            src/tri.c
+            #src/tri.c
             src/TexFont.cpp
             src/TexFont.h
      )
