--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,80 +1,6 @@
 ---
 version: 2
 jobs:
-   build-xenial:
-     docker:
-       - image: circleci/buildpack-deps:xenial-scm
-     environment:
-       - OCPN_TARGET:  xenial
-     steps:
-       - checkout
-       - run: >
-           echo "deb-src http://us.archive.ubuntu.com/ubuntu/ xenial main"
-           | sudo tee -a /etc/apt/sources.list
-       - run: >
-           echo "deb-src http://us.archive.ubuntu.com/ubuntu/ xenial-updates main"
-           | sudo tee -a /etc/apt/sources.list
-       - run: cat /etc/apt/sources.list
-       - run: ci/circleci-build-debian.sh
-       - run: ci/circleci-upload.sh
-   build-bionic:
-     docker:
-       - image: circleci/buildpack-deps:bionic-scm
-     environment:
-       - OCPN_TARGET:  bionic
-     steps:
-       - checkout
-       - run: >
-           echo "deb-src http://us.archive.ubuntu.com/ubuntu/ bionic main"
-           | sudo tee -a /etc/apt/sources.list
-       - run: >
-           echo "deb-src http://us.archive.ubuntu.com/ubuntu/ bionic-updates main"
-           | sudo tee -a /etc/apt/sources.list
-       - run: cat /etc/apt/sources.list
-       - run: ci/circleci-build-debian.sh
-       - run: ci/circleci-upload.sh
-   build-focal:
-     docker:
-       - image: circleci/buildpack-deps:focal-scm
-     environment:
-       - OCPN_TARGET:  focal
-     steps:
-       - checkout
-       - run: >
-           echo "deb-src http://us.archive.ubuntu.com/ubuntu/ focal main"
-           | sudo tee -a /etc/apt/sources.list
-       - run: >
-           echo "deb-src http://us.archive.ubuntu.com/ubuntu/ focal-updates main"
-           | sudo tee -a /etc/apt/sources.list
-       - run: cat /etc/apt/sources.list
-       - run: ci/circleci-build-debian.sh
-       - run: ci/circleci-upload.sh
-   build-bionic-gtk3:
-     docker:
-       - image: circleci/buildpack-deps:bionic-scm
-     environment:
-       - BUILD_GTK3: 1
-       - OCPN_TARGET:  bionic-gtk3
-     steps:
-       - checkout
-       - run: >
-           echo "deb-src http://us.archive.ubuntu.com/ubuntu/ bionic main"
-           | sudo tee -a /etc/apt/sources.list
-       - run: >
-           echo "deb-src http://us.archive.ubuntu.com/ubuntu/ bionic-updates main"
-           | sudo tee -a /etc/apt/sources.list
-       - run: cat /etc/apt/sources.list
-       - run: ci/circleci-build-debian.sh
-       - run: ci/circleci-upload.sh
-   build-buster:
-     docker:
-       - image: circleci/buildpack-deps:buster-scm
-     environment:
-       - OCPN_TARGET:  buster
-     steps:
-       - checkout
-       - run: ci/circleci-build-debian.sh
-       - run: ci/circleci-upload.sh
    build-flatpak-x86-64-1808:
      machine:
        image: circleci/classic:201808-01
@@ -84,57 +10,12 @@ jobs:
        - checkout
        - run: ci/circleci-build-flatpak-x86-64-1808.sh
        - run: ci/circleci-upload-flatpak.sh
-   build-flatpak-x86-64-2008:
-     machine:
-       image: circleci/classic:201808-01
-     environment:
-       - OCPN_TARGET:  flatpak
-     steps:
-       - checkout
-       - run: ci/circleci-build-flatpak-x86-64-2008.sh
-       - run: ci/circleci-upload-flatpak.sh
-   build-macos:
-     macos:
-       xcode: "10.0.0"
-     environment:
-       - OCPN_TARGET:  macos
-     steps:
-       - checkout
-       - run: ci/circleci-build-macos.sh
-       - run: ci/circleci-upload.sh
 workflows:
   version: 2
   build_all:
     jobs:
-      - build-xenial:
+       - build-flatpak-x86-64-1808:
           filters:
             branches:
-              only: master
-      - build-bionic-gtk3:
-          filters:
-            branches:
-              only: master
-      - build-bionic:
-          filters:
-            branches:
-              only: master
-      - build-focal:
-          filters:
-            branches:
-              only: master
-      - build-buster:
-          filters:
-            branches:
-              only: master
-      - build-flatpak-x86-64-2008:
-          filters:
-            branches:
-              only: master
-      - build-flatpak-x86-64-1808:
-          filters:
-            branches:
-              only: master
-      - build-macos:
-          filters:
-            branches:
-              only: master
+              only: f86-1808
+ 
