Correct branch reference in Flatpak .yaml spec file.

--- a/flatpak/org.opencpn.OpenCPN.Plugin.s63.yaml
+++ b/flatpak/org.opencpn.OpenCPN.Plugin.s63.yaml
@@ -22,6 +22,6 @@ modules:
       sources:
           - type: git
             url: ..
-            branch: master
+            branch: f86-1808
           - type: file
             path: OCPNsenc
