--- a/manual/site.yml
+++ b/manual/site.yml
@@ -5,8 +5,8 @@ site:
 
 content:
   sources:
-    - url: ../..
-      start_path: manual/s63_vector_charts
+    - url: ..
+      start_path: manual
       branches: HEAD
       edit_url: https://github.com/opencpn-manuals/s63_pi/edit/master/{path}
 
