--- a/manual/site.yml
+++ b/manual/site.yml
@@ -1,7 +1,7 @@
 site:
   title: S63 Plugin Manual
   url:  https://nowhere.net
-  start_page: s63_vector_charts:ROOT:s63_vector_charts.adoc
+  start_page: s63_vector_charts:ROOT:index.adoc
 
 content:
   sources:
