--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,27 @@ jobs:
             - /usr/local/lib
             - /usr/local/include
        - run: ci/circleci-upload-macos.sh
+
+   build-arm64-debian-bullseye:
+        machine:
+            image: ubuntu-2004:202104-01
+        environment:
+        - OCPN_TARGET=bullseye-arm64
+        - DOCKER_IMAGE=arm64v8/debian:bullseye-backports
+        - BUILD_FLAGS=-j3
+        - BUILD_ENV=debian
+        - BUILD_GTK3: true
+        steps:
+        - checkout
+        - run: chmod a+x ./ci/*.sh
+        - run:
+            command: ci/circleci-build-raspbian-arm64.sh
+            no_output_timeout: 30m
+        - run: sh -c "python3 -m pip install --user --upgrade -q setuptools wheel pip"
+        - run: sh -c "python3 -m pip install --user -q cloudsmith-cli cryptography"
+        - run: sh -c "pip install --upgrade cloudsmith-cli"
+        - run: sh -c "pwd; ls; cd build; ls; /bin/bash < upload.sh"
+
 workflows:
   version: 2
   build_all:
@@ -116,3 +137,8 @@ workflows:
           filters:
             branches:
               only: master
+      - build-arm64-debian-bullseye:
+          filters:
+            branches:
+              only: master
+
