Add wx32 to CCI build, Macos

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,6 +156,9 @@ workflows:
       - build-macos:
           filters:
             branches:
+              only:
+                - wx32
+                - master
       - build-arm64-debian-bullseye:
           filters:
             branches:
