--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ clone_depth: 10
 image:
 - Visual Studio 2017
 
-platform: 
+platform:
 # - x64
 - Win32
 
@@ -15,9 +15,9 @@ test: OFF
 install:
   # VS2015 and earlier version - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x86'
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
-  
+
   # set environment variables for wxWidgets
-  - set WXWIN=C:\wxWidgets-3.1.2
+  - set WXWIN=C:\wxWidgets-3.2.1
   - set wxWidgets_ROOT_DIR=%WXWIN%
   - set wxWidgets_LIB_DIR=%WXWIN%\lib\vc_dll
   - cmd: SET PATH=%PATH%;%WXWIN%;%wxWidgets_LIB_DIR%;C:\Program Files (x86)\Poedit\Gettexttools\bin;
@@ -26,8 +26,10 @@ install:
   - choco install poedit
 
   # Download and unzip wxwidgets
-  - ps: Start-FileDownload https://download.opencpn.org/s/E2p4nLDzeqx4SdX/download -FileName wxWidgets-3.1.2.7z
-  - cmd: 7z x wxWidgets-3.1.2.7z -o%WXWIN% > null
+  #- ps: Start-FileDownload https://download.opencpn.org/s/E2p4nLDzeqx4SdX/download -FileName wxWidgets-3.1.2.7z
+  #- cmd: 7z x wxWidgets-3.1.2.7z -o%WXWIN% > null
+  - ps: Start-FileDownload https://download.opencpn.org/s/mKn7bczRPSJXBtF/download -FileName wxWidgets-3.2.1.7z
+  - cmd: 7z x wxWidgets-3.2.1.7z -o%WXWIN% > null
 
   # some debugging information
   - set
