--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,7 +46,12 @@ before_build:
   - cd build
 #  - ps: Start-FileDownload http://opencpn.navnux.org/build_deps/OpenCPN_buildwin-4.99a.7z
 #  - cmd: 7z x -y OpenCPN_buildwin-4.99a.7z -oc:\project\opencpn\buildwin
-  - cmake -T v141 -DOCPN_CI_BUILD=ON ..
+#  - cmake -T v141 -DOCPN_CI_BUILD=ON ..
+
+   - cmake -A Win32 -G "Visual Studio 15 2017" ^
+      -DwxWidgets_LIB_DIR=C:\wxWidgets-3.2.1\lib\vc_dll ^
+      -DwxWidgets_ROOT_DIR=C:\wxWidgets-3.2.1 ^
+      ..
 
 build_script:
   - cmake -G "Visual Studio 15 2017"   ..
