--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ shallow_clone: false
 clone_depth: 10
 
 image:
-- Visual Studio 2017
+- Visual Studio 2022
 
 platform:
 # - x64
@@ -14,7 +14,9 @@ test: OFF
 
 install:
   # VS2015 and earlier version - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x86'
-  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
+  #- call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
+  - set "VS_HOME=C:\Program Files\Microsoft Visual Studio\2022"
+  - call "%VS_HOME%\Community\VC\Auxiliary\Build\vcvars32.bat"
 
   # set environment variables for wxWidgets
   - set WXWIN=C:\wxWidgets-3.2.1
@@ -48,13 +50,14 @@ before_build:
 #  - cmd: 7z x -y OpenCPN_buildwin-4.99a.7z -oc:\project\opencpn\buildwin
 #  - cmake -T v141 -DOCPN_CI_BUILD=ON ..
 
-  - cmake -A Win32 -G "Visual Studio 15 2017" ^
+  - cmake -A Win32 -G "Visual Studio 17 2022" ^
+      -DCMAKE_GENERATOR_PLATFORM=Win32 ^
       -DwxWidgets_LIB_DIR=C:\wxWidgets-3.2.1\lib\vc_dll ^
       -DwxWidgets_ROOT_DIR=C:\wxWidgets-3.2.1 ^
       ..
 
 build_script:
-  - cmake -G "Visual Studio 15 2017"   ..
+  - cmake -G "Visual Studio 17 2022"   ..
   - cmake --build . --target install --config RelWithDebInfo
   - cmake --build . --target package --config RelWithDebInfo
   - choco install git
