--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,6 @@ configuration: RelWithDebInfo
 test: OFF
 
 install:
-  # VS2015 and earlier version - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x86'
-  #- call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
   - set "VS_HOME=C:\Program Files\Microsoft Visual Studio\2022"
   - call "%VS_HOME%\Community\VC\Auxiliary\Build\vcvars32.bat"
 
@@ -28,31 +26,25 @@ install:
   - choco install poedit
 
   # Download and unzip wxwidgets
-  #- ps: Start-FileDownload https://download.opencpn.org/s/E2p4nLDzeqx4SdX/download -FileName wxWidgets-3.1.2.7z
-  #- cmd: 7z x wxWidgets-3.1.2.7z -o%WXWIN% > null
-  - ps: Start-FileDownload https://download.opencpn.org/s/mKn7bczRPSJXBtF/download -FileName wxWidgets-3.2.1.7z
-  - cmd: 7z x wxWidgets-3.2.1.7z -o%WXWIN% > null
+  #- ps: Start-FileDownload https://download.opencpn.org/s/mKn7bczRPSJXBtF/download -FileName wxWidgets-3.2.1.7z
+  #- cmd: 7z x wxWidgets-3.2.1.7z -o%WXWIN% > null
+
+  - ps: Start-FileDownload https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.1/wxMSW-3.2.1_vc14x_Dev.7z
+  - cmd: 7z x -oC:\wxWidgets-3.2.1 wxMSW-3.2.1_vc14x_Dev.7z
+  - ps: Start-FileDownload https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.1/wxWidgets-3.2.1-headers.7z
+  - cmd: 7z x -oC:\wxWidgets-3.2.1 wxWidgets-3.2.1-headers.7z
 
   # some debugging information
   - set
-  # - cmake --help
-
-  # build wxWidgets - Disabled as we provide prebuilt WX to save time
-  #- cmd: cd %WXWIN%\build\msw\
-  #- cmd: nmake -f makefile.vc BUILD=release SHARED=1 CFLAGS=/D_USING_V120_SDK71_ CXXFLAGS=/D_USING_V120_SDK71_
-  #- cmd: nmake -f makefile.vc BUILD=debug SHARED=1 CFLAGS=/D_USING_V120_SDK71_ CXXFLAGS=/D_USING_V120_SDK71_
 
 before_build:
   - cd c:\project\opencpn\plugin_source
   - mkdir build
   - cd build
-#  - ps: Start-FileDownload http://opencpn.navnux.org/build_deps/OpenCPN_buildwin-4.99a.7z
-#  - cmd: 7z x -y OpenCPN_buildwin-4.99a.7z -oc:\project\opencpn\buildwin
-#  - cmake -T v141 -DOCPN_CI_BUILD=ON ..
 
   - cmake -A Win32 -G "Visual Studio 17 2022" ^
       -DCMAKE_GENERATOR_PLATFORM=Win32 ^
-      -DwxWidgets_LIB_DIR=C:\wxWidgets-3.2.1\lib\vc_dll ^
+      -DwxWidgets_LIB_DIR=C:\wxWidgets-3.2.1\lib\vc14x_dll ^
       -DwxWidgets_ROOT_DIR=C:\wxWidgets-3.2.1 ^
       ..
 
