TLS docker fedora test #16

--- a/flatpak/org.opencpn.OpenCPN.Plugin.s63.yaml
+++ b/flatpak/org.opencpn.OpenCPN.Plugin.s63.yaml
@@ -1,6 +1,6 @@
 id: org.opencpn.OpenCPN.Plugin.s63
 runtime: org.opencpn.OpenCPN
-runtime-version: master
+runtime-version: stable
 sdk: org.freedesktop.Sdk//22.08
 build-extension: true
 separate-locales: false
