--- a/build-deps/control
+++ b/build-deps/control
@@ -1,10 +1,12 @@
 Source: opencpn
 Build-Depends: debhelper (>= 9),
  git,
- libcurl4-openssl-dev,
+ libcurl-dev,
+ libgtk2.0-dev,
  libgl-dev,
- zlib1g-dev,
  libjsoncpp-dev,
+ libssl-dev,
+ libtinyxml-dev,
  libunarr-dev | base-files (<< 11),
  base-files (>=11) | libwxgtk3.0-dev,
  base-files (>=11) | libwxgtk3.0-0v5 | libwxgtk3.0-0,
@@ -15,8 +17,7 @@ Build-Depends: debhelper (>= 9),
  lsb-release,
  python3-pip,
  python3-setuptools,
- python3-wheel,
- libglew-dev
+ python3-wheel
 
 Standards-Version: 4.3.0
 Homepage: https://opencpn.org
